--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.3.13",
@@ -103,6 +104,7 @@
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "node-sass": "^4.0.0",
     "normalize.css": "^5.0.0",
