--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
+    "babel-plugin-react-css-modules": "^3.3.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
@@ -99,7 +100,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
-    "react-router": "^3.0.0",
+    "react-router-dom": "^4.2.2",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
@@ -166,7 +167,7 @@
     "sinon-chai": "^2.10.0",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
+    "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2",
     "yargs": "^8.0.1"
